Fix emojis on Firefox, fix D100
- Certain emojis were missing VS-16, which lead to them being displayed as text in some (unknown_ circumstances.
- On the other hand, emojis in SVGs don't render with VS-16, but I deemed that better than the abomination it is without.
- CSS targeting in a <use> element doesn't work well, so it's now just `*`.

--- a/public/main.css
+++ b/public/main.css
@@ -295,9 +295,6 @@ footer {
                 * {
                     stroke-width: 4px;
                     stroke: var(--primary-dark);
-                }
-
-                polygon, ellipse {
                     fill: var(--primary-light);
                 }
 
